Organizando todas as guias em pastas e alterando seus nomes

--- a/public/screens/Login.html
+++ b/public/screens/Login.html
@@ -1,5 +1,15 @@
-<div class="login">
-  <div class="login2">Login</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="vars.css">
+  <title>Document</title>
+</head>
+<body>
+  <div class="Containner">
+  <div class="titulo">Login</div>
   <div class="rectangle-18"></div>
   <div class="rectangle-19"></div>
   <div class="nome-do-usuario">Nome do usuario</div>
@@ -14,3 +24,6 @@
   <div class="rectangle-21"></div>
   <img class="image-5" src="image-50.png" />
 </div>
+
+</body>
+</html>
