criacao do layout da tela cadastro e css geral e do cadastro

--- a/public/screens/Cadastro.html
+++ b/public/screens/Cadastro.html
@@ -1,13 +1,30 @@
-<div class="cadastro">
-  <div class="cadastro2">Cadastro</div>
-  <div class="rectangle-18"></div>
-  <div class="rectangle-19"></div>
-  <div class="nome-do-usuario">Nome do usuario</div>
-  <div class="ja-possui-uma-conta-logue">Ja possui uma conta? Logue</div>
-  <div class="email">Email</div>
-  <div class="rectangle-21"></div>
-  <div class="senha">Senha</div>
-  <div class="rectangle-20"></div>
-  <div class="cadastrar">Cadastrar</div>
-  <img class="image-5" src="image-50.png" />
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styleAll.css">
+  <link rel="stylesheet" href="styleCadastro.css">
+  <title>Cadastro</title>
+</head>
+<body>
+  <div class="container">
+    <div class="cards">
+      <div class="card">
+        <img src="../imgs/image-50.png" class="logo-inicial" alt="Logo">
+        <h1 class="cadastroText">Cadastro</h1>
+
+        <input type="text" class="campos" placeholder="Nome">
+        <input type="email" class="campos" placeholder="Email">
+        <input type="password" class="campos" placeholder="Senha">
+        <input type="password" class="campos" placeholder="Confirmar Senha">
+        <button class="btn-all">Cadastrar</button>
+          <div class="msg1">
+            <p>Ja possui uma conta?</p> <a href="Login.html">Logue</a>
+          </div>
+      </div>
+    </div>
+  </div>
+
+</body>
+</html>
