finalizado Login e iniciando Curso

--- a/public/screens/Cadastro.html
+++ b/public/screens/Cadastro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
         <img src="../imgs/image-50.png" class="logo-inicial" alt="Logo">
         <h1 class="cadastroText">Cadastro</h1>
 
-        <input type="text" class="campos" placeholder="Nome">
+        <input type="text" class="campos" placeholder="Nome do usuario">
         <input type="email" class="campos" placeholder="Email">
         <input type="password" class="campos" placeholder="Senha">
         <input type="password" class="campos" placeholder="Confirmar Senha">
