--- a/public/screens/Login.html
+++ b/public/screens/Login.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="vars.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="styleAll.css">
+  <link rel="stylesheet" href="styleLogin.css">
+  <title>Cadastro</title>
 </head>
 <body>
-  <div class="Containner">
-  <div class="titulo">Login</div>
-  <div class="rectangle-18"></div>
-  <div class="rectangle-19"></div>
-  <div class="nome-do-usuario">Nome do usuario</div>
-  <div class="esqueci-a-senha">Esqueci a senha?</div>
-  <div class="n-o-tem-conta-fa-a-seu-cadastro">
-    Não tem conta? Faça seu cadastro!
+  <div class="container">
+    <div class="cards">
+      <div class="card">
+        <img src="../imgs/image-50.png" class="logo-inicial" alt="Logo">
+        <h1 class="cadastroText">Login</h1>
+
+        <input type="text" class="campos" placeholder="Nome do usuario">
+        <input type="email" class="campos" placeholder="Email">
+        <input type="password" class="campos" placeholder="Senha">
+        <button class="btn-all">Logar</button>
+          <div class="msg1">
+            <p>Não possui uma conta?</p> <a href="Cadastro.html"> Cadastre-se</a>
+          </div>
+      </div>
+    </div>
   </div>
-  <div class="lembre-se">Lembre-se</div>
-  <div class="senha">Senha</div>
-  <div class="rectangle-20"></div>
-  <div class="entrar">Entrar</div>
-  <div class="rectangle-21"></div>
-  <img class="image-5" src="image-50.png" />
-</div>
 
 </body>
 </html>
