--- a/public/screens/Curso.html
+++ b/public/screens/Curso.html
@@ -4,43 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./vars.css">
-  <link rel="stylesheet" href="./style.css">
-  
-  
-  <style>
-   a,
-   button,
-   input,
-   select,
-   h1,
-   h2,
-   h3,
-   h4,
-   h5,
-   * {
-       box-sizing: border-box;
-       margin: 0;
-       padding: 0;
-       border: none;
-       text-decoration: none;
-       background: none;
-   
-       -webkit-font-smoothing: antialiased;
-   }
-   
-   menu, ol, ul {
-       list-style-type: none;
-       margin: 0;
-       padding: 0;
-   }
-   </style>
+  <link rel="stylesheet" href="./styleAll.css">
+  <link rel="stylesheet" href="./styleCurso.css">
   <title>Document</title>
 </head>
 <body>
   <div class="curso">
-    <div class="rectangle-2"></div>
-    <div class="rectangle-3"></div>
+    <div class="card"></div>
+    <div class="card"></div>
     <div class="rectangle-1"></div>
     <div class="rectangle-4"></div>
     <div class="rectangle-5"></div>
