finalizado cadastro, login, Curso e Noticias

--- a/public/screens/Cadastro.html
+++ b/public/screens/Cadastro.html
@@ -11,14 +11,14 @@
   <div class="container">
     <div class="cards">
       <div class="card">
-        <img src="../imgs/image-50.png" class="logo-inicial" alt="Logo">
+        <img src="../imgs/logo.png" class="logo-inicial" alt="Logo">
         <h1 class="cadastroText">Cadastro</h1>
 
         <input type="text" class="campos" placeholder="Nome do usuario">
         <input type="email" class="campos" placeholder="Email">
         <input type="password" class="campos" placeholder="Senha">
         <input type="password" class="campos" placeholder="Confirmar Senha">
-        <button class="btn-all">Cadastrar</button>
+        <button class="btn-all" onclick="window.location.href='Curso.html'">Cadastrar</button>
           <div class="msg1">
             <p>Ja possui uma conta?</p> <a href="Login.html">Logue</a>
           </div>
