--- a/public/screens/Login.html
+++ b/public/screens/Login.html
@@ -11,13 +11,13 @@
   <div class="container">
     <div class="cards">
       <div class="card">
-        <img src="../imgs/image-50.png" class="logo-inicial" alt="Logo">
+        <img src="../imgs/logo.png" class="logo-inicial" alt="Logo">
         <h1 class="cadastroText">Login</h1>
 
         <input type="text" class="campos" placeholder="Nome do usuario">
         <input type="email" class="campos" placeholder="Email">
         <input type="password" class="campos" placeholder="Senha">
-        <button class="btn-all">Logar</button>
+        <button class="btn-all" onclick="window.location.href='Curso.html'">Logar</button>
           <div class="msg1">
             <p>Não possui uma conta?</p> <a href="Cadastro.html"> Cadastre-se</a>
           </div>
