--- a/public/screens/Noticias.html
+++ b/public/screens/Noticias.html
@@ -1,155 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./vars.css">
-  <link rel="stylesheet" href="./style.css">
-  
-  
-  <style>
-   a,
-   button,
-   input,
-   select,
-   h1,
-   h2,
-   h3,
-   h4,
-   h5,
-   * {
-       box-sizing: border-box;
-       margin: 0;
-       padding: 0;
-       border: none;
-       text-decoration: none;
-       background: none;
-   
-       -webkit-font-smoothing: antialiased;
-   }
-   
-   menu, ol, ul {
-       list-style-type: none;
-       margin: 0;
-       padding: 0;
-   }
-   </style>
-  <title>Document</title>
+  <title>Informatitchology</title>
+  <link rel="stylesheet" href="styleAll.css">
+  <link rel="stylesheet" href="styleNoticias.css">
 </head>
 <body>
-  <div class="noticias">
-    <div class="rectangle-2"></div>
-    <div class="rectangle-3"></div>
-    <div class="rectangle-1"></div>
-    <div class="ol-fulano">Olá, Fulano</div>
-    <div class="seja-bem-vindos-a-ao-informatitchology">
-      Seja bem-vindos(a) ao Informatitchology.
-      <br />
-    </div>
-    <div class="rectangle-8"></div>
-    <div class="rectangle-9"></div>
-    <div class="rectangle-10"></div>
-    <img class="frame" src="frame0.svg" />
-    <div
-      class="bem-vindo-a-ao-aplicativo-de-not-cias-sobre-tecnologia-da-informa-o-aqui-voc-ficar-por-dentro-das-ltimas-novidades-sobre-as-tecnologias-emergentes-do-mercado-acompanhe-mat-rias-sobre-programa-o-redes-design-projetos-engenharia-de-software-intelig-ncia-artificial-e-muito-mais-explore-os-links-e-fique-sempre-atualizado-com-o-que-h-de-mais-recente-no-mundo-da-tecnologia"
-    >
-      Bem-vindo(a) ao aplicativo de notícias sobre Tecnologia da Informação! Aqui,
-      você ficará por dentro das últimas novidades sobre as tecnologias emergentes
-      do mercado. Acompanhe matérias sobre programação, redes, design, projetos,
-      engenharia de software, inteligência artificial e muito mais.
-      <br />
-      Explore os links e fique sempre atualizado com o que há de mais recente no
-      mundo da tecnologia!
-    </div>
-    <div
-      class="conhe-a-5-linguagens-de-programa-o-populares-no-mercado-de-tecnologia-conhe-a-cinco-linguagens-de-programa-o-populares-no-mercado-de-tecnologia-saiba-tudo-sobre-python-java-script-java-entre-outras"
-    >
-      <span>
-        <span
-          class="conhe-a-5-linguagens-de-programa-o-populares-no-mercado-de-tecnologia-conhe-a-cinco-linguagens-de-programa-o-populares-no-mercado-de-tecnologia-saiba-tudo-sobre-python-java-script-java-entre-outras-span"
-        >
-          Conheça 5 linguagens de programação populares no mercado de tecnologia
-          <br />
-        </span>
-        <span
-          class="conhe-a-5-linguagens-de-programa-o-populares-no-mercado-de-tecnologia-conhe-a-cinco-linguagens-de-programa-o-populares-no-mercado-de-tecnologia-saiba-tudo-sobre-python-java-script-java-entre-outras-span2"
-        >
-          <br />
-          Conheça cinco linguagens de programação populares no mercado de
-          tecnologia. Saiba tudo sobre Python, JavaScript, Java, entre outras...
-        </span>
-      </span>
-    </div>
-    <div
-      class="programador-condenado-em-at-10-anos-de-pris-o-por-sabotar-sistema-de-empresa-ap-s-ser-demitido-vingan-a-exagerada-o-programador-davis-lu-de-55-anos-enfrenta-at-10-anos-de-pris-o-ap-s-ser-condenado-por-um-j-ri-nos-estados-unidos-por"
-    >
-      <span>
-        <span
-          class="programador-condenado-em-at-10-anos-de-pris-o-por-sabotar-sistema-de-empresa-ap-s-ser-demitido-vingan-a-exagerada-o-programador-davis-lu-de-55-anos-enfrenta-at-10-anos-de-pris-o-ap-s-ser-condenado-por-um-j-ri-nos-estados-unidos-por-span"
-        >
-          Programador é condenado em até 10 anos de prisão por sabotar sistema de
-          empresa após ser demitido
-          <br />
-        </span>
-        <span
-          class="programador-condenado-em-at-10-anos-de-pris-o-por-sabotar-sistema-de-empresa-ap-s-ser-demitido-vingan-a-exagerada-o-programador-davis-lu-de-55-anos-enfrenta-at-10-anos-de-pris-o-ap-s-ser-condenado-por-um-j-ri-nos-estados-unidos-por-span2"
-        >
-          <br />
-          Vingança exagerada? ... O programador Davis Lu, de 55 anos, enfrenta até
-          10 anos de prisão após ser condenado por um júri nos Estados Unidos
-          por...
-        </span>
-      </span>
-    </div>
-    <img class="rectangle-11" src="rectangle-110.svg" />
-    <div
-      class="revolta-da-ia-assistente-se-recusa-a-escrever-c-digo-e-sugere-que-programador-aprenda-sozinho-revolta-da-ia-assistente-se-recusa-a-escrever-c-digo-e-sugere-que-programador-aprenda-sozinho-cursor-ai-se-negou-a-gerar-c-digo-ap-s-800"
-    >
-      <span>
-        <span
-          class="revolta-da-ia-assistente-se-recusa-a-escrever-c-digo-e-sugere-que-programador-aprenda-sozinho-revolta-da-ia-assistente-se-recusa-a-escrever-c-digo-e-sugere-que-programador-aprenda-sozinho-cursor-ai-se-negou-a-gerar-c-digo-ap-s-800-span"
-        >
-          Revolta da IA: assistente se recusa a escrever código e sugere que
-          programador aprenda sozinho
-          <br />
-        </span>
-        <span
-          class="revolta-da-ia-assistente-se-recusa-a-escrever-c-digo-e-sugere-que-programador-aprenda-sozinho-revolta-da-ia-assistente-se-recusa-a-escrever-c-digo-e-sugere-que-programador-aprenda-sozinho-cursor-ai-se-negou-a-gerar-c-digo-ap-s-800-span2"
-        >
-          <br />
-          Revolta da IA: assistente se recusa a escrever código e sugere que
-          programador aprenda sozinho · Cursor AI se negou a gerar código após
-          800...
-        </span>
-      </span>
-    </div>
-    <div class="saiba-mais">Saiba mais</div>
-    <div class="rectangle-13"></div>
-    <div class="saiba-mais2">Saiba mais</div>
-    <div class="rectangle-12"></div>
-    <div class="saiba-mais3">Saiba mais</div>
-    <img
-      class="dall-e-2025-03-26-14-56-35-uma-imagem-moderna-e-vibrante-representando-cursos-de-tecnologia-da-informa-o-a-ilustra-o-inclui-estudantes-de-diversas-idades-e-g-neros-em-uma-sal-1"
-      src="dall-e-2025-03-26-14-56-35-uma-imagem-moderna-e-vibrante-representando-cursos-de-tecnologia-da-informa-o-a-ilustra-o-inclui-estudantes-de-diversas-idades-e-g-neros-em-uma-sal-10.png"
-    />
-    <img class="image-5" src="image-50.png" />
-    <div class="rectangle-14"></div>
-    <img class="image-6" src="image-60.png" />
-    <img class="image-7" src="image-70.png" />
-    <img class="image-8" src="image-80.png" />
-    <div class="rectangle-15"></div>
-    <div class="rectangle-16"></div>
-    <img class="rectangle-17" src="rectangle-170.svg" />
-    <div class="curso">Curso</div>
-    <div class="noticias2">Noticias</div>
-    <div class="contato">Contato</div>
-    <div class="criado-por-gustavo-porto">
-      Criado por:
-      <br />
-      Gustavo Porto
-    </div>
+  <div class="container">
+    <header class="header">
+      <div class="header-top">
+        <img src="../imgs/logo.png" alt="Logo" class="logo">
+        <div class="user">
+          <p>Olá, Fulano</p>
+          <p>Seja bem-vindo(a) ao Informatitchology.</p>
+        </div>
+        <img src="../imgs/recurs/perfil.png" alt="Usuário" class="user-icon" onclick="window.location.href='Perfil.html'">
+      </div>
+      <div class="menu">
+        <button  onclick="window.location.href='Curso.html'">Curso</button>
+        <button onclick="window.location.href='Noticias.html'">Notícias</button>
+        <button onclick="window.location.href='Contato.html'">Contato</button>
+      </div>
+    </header>
+
+    <main class="main-content">
+      <section class="intro">
+        <img src="../imgs/conteudo/img_random.png" alt="Alunos em aula">
+        <p>
+          Bem-vindo(a) ao aplicativo de notícias sobre Tecnologia da Informação! Aqui, 
+          você ficará por dentro das últimas novidades sobre as tecnologias emergentes do 
+          mercado. Acompanhe matérias sobre programação, redes, design, projetos, engenharia 
+          de software, inteligência artificial e muito mais.
+          Explore os links e fique sempre atualizado com o que há de mais recente no 
+          mundo da tecnologia!
+        </p>
+      </section>
+
+      <section class="cards">
+        <div class="card">
+          <img src="../imgs/conteudo/image-60.png" alt="Noticia 1">
+          <h3>Conheça 5 linguagens de programação populares no mercado de tecnologia</h3>
+          <p>Conheça cinco linguagens de programação populares no mercado de tecnologia. 
+            Saiba tudo sobre Python, JavaScript, Java, entre outras...</p>
+          <button onclick="window.open('https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=newssearch&cd=&cad=rja&uact=8&ved=2ahUKEwjRsNTxgcuMAxUpLbkGHQk6C2AQxfQBKAB6BAgREAE&url=https%3A%2F%2Fwww.univates.br%2Fblog%2Fconheca-5-linguagens-da-programacao%2F&usg=AOvVaw3gVn_ym1EcUX_Xi1BRqoZK&opi=89978449', '_blank')">
+            Saiba mais</button>
+        </div>
+        <div class="card">
+          <img src="../imgs/conteudo/image-70.png" alt="Noticia 2">
+          <h3>Revolta da IA: assistente se recusa a escrever 
+            código e sugere que programador aprenda sozinho</h3>
+          <p>Revolta da IA: assistente se recusa a escrever código e sugere que programador 
+            aprenda sozinho · Cursor AI se negou a gerar código após 800...</p>
+          <button onclick="window.open('https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=newssearch&cd=&cad=rja&uact=8&ved=2ahUKEwj-2t6GhcuMAxW9ppUCHWuoGXQQxfQBKAB6BAgMEAE&url=https%3A%2F%2Foglobo.globo.com%2Fopiniao%2Fnoticia%2F2025%2F03%2F15%2Fia-se-recusa-a-escrever-codigo-e-sugere-que-programador-compreenda-melhor-o-sistema.ghtml&usg=AOvVaw1GhRseJhZrdvXXLSgbxI1I&opi=89978449', '_blank')">
+            Saiba mais</button>
+        </div>
+        <div class="card">
+          <img src="../imgs/conteudo/image-80.png" alt="Noticia 3">
+          <h3>Programador é condenado em até 10 anos de prisão por sabotar sistema 
+            de empresa após ser demitido</h3>
+          <p>Vingança exagerada? ... O programador Davis Lu, de 55 anos, enfrenta 
+            até 10 anos de prisão após ser condenado por um júri nos Estados Unidos por...</p>
+          <button onclick="window.open('https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=newssearch&cd=&cad=rja&uact=8&ved=2ahUKEwj-2t6GhcuMAxW9ppUCHWuoGXQQxfQBKAB6BAgLEAE&url=https%3A%2F%2Fbr.ign.com%2Ftech%2F137539%2Fnews%2Fprogramador-e-condenado-em-ate-10-anos-de-prisao-por-sabotar-sistema-de-empresa-apos-ser-demitido&usg=AOvVaw2F0knyMCgG3PRXvQIWsTrU&opi=89978449', '_blank')">
+            Saiba mais</button>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      Criado por: Gustavo Porto
+    </footer>
   </div>
-  
 </body>
 </html>
