--- a/public/screens/Curso.html
+++ b/public/screens/Curso.html
@@ -1,125 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styleAll.css">
-  <link rel="stylesheet" href="./styleCurso.css">
-  <title>Document</title>
+  <title>Informatitchology</title>
+  <link rel="stylesheet" href="styleAll.css">
+  <link rel="stylesheet" href="styleCurso.css">
 </head>
 <body>
-  <div class="curso">
-    <div class="card"></div>
-    <div class="card"></div>
-    <div class="rectangle-1"></div>
-    <div class="rectangle-4"></div>
-    <div class="rectangle-5"></div>
-    <img class="rectangle-7" src="rectangle-70.svg" />
-    <div class="ol-fulano">Olá, Fulano</div>
-    <div class="seja-bem-vindos-a-ao-informatitchology">
-      Seja bem-vindos(a) ao Informatitchology.
-    </div>
-    <div class="curso2">Curso</div>
-    <div class="noticias">Noticias</div>
-    <div class="contato">Contato</div>
-    <div class="rectangle-8"></div>
-    <div class="rectangle-9"></div>
-    <div class="rectangle-10"></div>
-    <img class="frame" src="frame0.svg" />
-    <div
-      class="bem-vindo-a-ao-aplicativo-de-cursos-da-rea-de-tecnologia-da-informa-o-na-qual-ir-aprender-sobre-as-tecnologias-emergentes-do-mercado-de-trabalho-aqui-voc-ira-encontrar-cursos-sobre-programa-o-redes-design-projetos-engenharia-de-software-inteligencia-artificial-e-muito-mais-explore-os-links-e-navegue-conosco-nesta-jornada-de-aprendizado"
-    >
-      Bem-vindo(a) ao aplicativo de cursos da área de Tecnologia da Informação, na
-      qual irá aprender sobre as tecnologias emergentes do mercado de trabalho.
-      Aqui você ira encontrar cursos sobre programação, redes, design, projetos,
-      engenharia de software, inteligencia artificial e muito mais.
-      <br />
-      Explore os links e navegue conosco nesta jornada de aprendizado
-    </div>
-    <div
-      class="o-que-tecnologia-da-informa-o-a-tecnologia-da-informa-o-ti-um-dos-pilares-fundamentais-da-era-digital-desempenhando-um-papel-estrat-gico-na-inova-o-automa-o-e-otimiza-o-de-processos-em-empresas-e-na-sociedade"
-    >
-      <span>
-        <span
-          class="o-que-tecnologia-da-informa-o-a-tecnologia-da-informa-o-ti-um-dos-pilares-fundamentais-da-era-digital-desempenhando-um-papel-estrat-gico-na-inova-o-automa-o-e-otimiza-o-de-processos-em-empresas-e-na-sociedade-span"
-        >
-          O que é tecnologia da Informação?
-          <br />
-        </span>
-        <span
-          class="o-que-tecnologia-da-informa-o-a-tecnologia-da-informa-o-ti-um-dos-pilares-fundamentais-da-era-digital-desempenhando-um-papel-estrat-gico-na-inova-o-automa-o-e-otimiza-o-de-processos-em-empresas-e-na-sociedade-span2"
-        >
-          <br />
-          A Tecnologia da Informação (TI) é um dos pilares fundamentais da era
-          digital, desempenhando um papel estratégico na inovação, automação e
-          otimização de processos em empresas e na sociedade.
-        </span>
-      </span>
-    </div>
-    <div
-      class="roadmap-para-aprender-programa-o-o-caminho-certo-para-se-tornar-um-programador-um-roadmap-define-quais-habilidades-e-tecnologias-devem-ser-aprendidas-primeiro-organizando-o-conhecimento-quando-algu-m-come-a-a-estudar-programa-o-sem-um-roteiro-h-grandes-chances-de-pular-etapas-importantes-ou-focar-em-conte-dos-avan-ados-sem-ter-uma-base-s-lida"
-    >
-      <span>
-        <span
-          class="roadmap-para-aprender-programa-o-o-caminho-certo-para-se-tornar-um-programador-um-roadmap-define-quais-habilidades-e-tecnologias-devem-ser-aprendidas-primeiro-organizando-o-conhecimento-quando-algu-m-come-a-a-estudar-programa-o-sem-um-roteiro-h-grandes-chances-de-pular-etapas-importantes-ou-focar-em-conte-dos-avan-ados-sem-ter-uma-base-s-lida-span"
-        >
-          Roadmap Para Aprender Programação: O Caminho Certo Para se Tornar um
-          Programador
-          <br />
-        </span>
-        <span
-          class="roadmap-para-aprender-programa-o-o-caminho-certo-para-se-tornar-um-programador-um-roadmap-define-quais-habilidades-e-tecnologias-devem-ser-aprendidas-primeiro-organizando-o-conhecimento-quando-algu-m-come-a-a-estudar-programa-o-sem-um-roteiro-h-grandes-chances-de-pular-etapas-importantes-ou-focar-em-conte-dos-avan-ados-sem-ter-uma-base-s-lida-span2"
-        >
-          <br />
-          Um roadmap define quais habilidades e tecnologias devem ser aprendidas
-          primeiro, organizando o conhecimento. Quando alguém começa a estudar
-          programação sem um roteiro, há grandes chances de pular etapas
-          importantes ou focar em conteúdos avançados sem ter uma base sólida.
-        </span>
-      </span>
-    </div>
-    <img class="image-3" src="image-30.png" />
-    <img class="image-1" src="image-10.png" />
-    <img class="image-2" src="image-20.png" />
-    <div class="rectangle-11"></div>
-    <div
-      class="o-que-linguagem-portugol-guia-definitivo-o-primeiro-passo-no-aprendizado-de-programa-o-dominar-o-que-chamamos-de-l-gica-uma-das-ferramentas-mais-utilizadas-para-ensinar-l-gica-de-programa-o-a-linguagem-portugol"
-    >
-      <span>
-        <span
-          class="o-que-linguagem-portugol-guia-definitivo-o-primeiro-passo-no-aprendizado-de-programa-o-dominar-o-que-chamamos-de-l-gica-uma-das-ferramentas-mais-utilizadas-para-ensinar-l-gica-de-programa-o-a-linguagem-portugol-span"
-        >
-          O que é linguagem Portugol? Guia Definitivo
-          <br />
-        </span>
-        <span
-          class="o-que-linguagem-portugol-guia-definitivo-o-primeiro-passo-no-aprendizado-de-programa-o-dominar-o-que-chamamos-de-l-gica-uma-das-ferramentas-mais-utilizadas-para-ensinar-l-gica-de-programa-o-a-linguagem-portugol-span2"
-        >
-          <br />
-          O primeiro passo no aprendizado de programação é dominar o que chamamos
-          de ‘Lógica’. Uma das ferramentas mais utilizadas para ensinar lógica de
-          programação é a Linguagem Portugol.
-        </span>
-      </span>
-    </div>
-    <div class="saiba-mais">Saiba mais</div>
-    <div class="rectangle-13"></div>
-    <div class="saiba-mais2">Saiba mais</div>
-    <div class="rectangle-12"></div>
-    <div class="saiba-mais3">Saiba mais</div>
-    <img
-      class="dall-e-2025-03-26-14-56-35-uma-imagem-moderna-e-vibrante-representando-cursos-de-tecnologia-da-informa-o-a-ilustra-o-inclui-estudantes-de-diversas-idades-e-g-neros-em-uma-sal-1"
-      src="dall-e-2025-03-26-14-56-35-uma-imagem-moderna-e-vibrante-representando-cursos-de-tecnologia-da-informa-o-a-ilustra-o-inclui-estudantes-de-diversas-idades-e-g-neros-em-uma-sal-10.png"
-    />
-    <img class="image-5" src="image-50.png" />
-    <div class="rectangle-14"></div>
-    <div class="criado-por-gustavo-porto">
-      Criado por:
-      <br />
-      Gustavo Porto
-    </div>
+  <div class="container">
+    <header class="header">
+      <div class="header-top">
+        <img src="../imgs/logo.png" alt="Logo" class="logo">
+        <div class="user">
+          <p>Olá, Fulano</p>
+          <p>Seja bem-vindo(a) ao Informatitchology.</p>
+        </div>
+        <img src="../imgs/recurs/perfil.png" alt="Usuário" class="user-icon" onclick="window.location.href='Perfil.html'">
+      </div>
+      <div class="menu">
+        <button  onclick="window.location.href='Curso.html'">Curso</button>
+        <button onclick="window.location.href='Noticias.html'">Notícias</button>
+        <button onclick="window.location.href='Contato.html'">Contato</button>
+      </div>
+    </header>
+
+    <main class="main-content">
+      <section class="intro">
+        <img src="../imgs/conteudo/img_random.png" alt="Alunos em aula">
+        <p>
+          Bem-vindo(a) ao aplicativo de cursos na área de Tecnologia da Informação,
+          que traz as melhores soluções e tecnologias emergentes do mercado de trabalho.
+          Aqui você irá encontrar cursos sobre programação, redes, segurança, projetos,
+          engenharia de software, inteligência artificial e muito mais.
+        </p>
+      </section>
+
+      <section class="cards">
+        <div class="card">
+          <img src="../imgs/conteudo/image-10.png" alt="">
+          <h3>O que é tecnologia da informação?</h3>
+          <p>A tecnologia da informação (TI) é um dos pilares fundamentais da digitalização...</p>
+          <button onclick="window.location.href='Curso1.html'">Saiba mais</button>
+        </div>
+        <div class="card">
+          <img src="../imgs/conteudo/image-20.png" alt="">
+          <h3>O que é linguagem Portugol? Guia Definitivo</h3>
+          <p>Conheça os principais conceitos da linguagem Portugol e aprenda como ela é usada...</p>
+          <button onclick="window.location.href='Curso2.html'">Saiba mais</button>
+        </div>
+        <div class="card">
+          <img src="../imgs/conteudo/image-30.png" alt="">
+          <h3>Roadmap Para Aprender Programação</h3>
+          <p>Um guia prático e estruturado para quem deseja entrar no mundo da programação...</p>
+          <button onclick="window.location.href='Curso3.html'">Saiba mais</button>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      Criado por: Gustavo Porto
+    </footer>
   </div>
-  
 </body>
 </html>
