--- a/public/screens/Curso1.html
+++ b/public/screens/Curso1.html
@@ -1,84 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./vars.css">
-  <link rel="stylesheet" href="./style.css">
-  
-  
-  <style>
-   a,
-   button,
-   input,
-   select,
-   h1,
-   h2,
-   h3,
-   h4,
-   h5,
-   * {
-       box-sizing: border-box;
-       margin: 0;
-       padding: 0;
-       border: none;
-       text-decoration: none;
-       background: none;
-   
-       -webkit-font-smoothing: antialiased;
-   }
-   
-   menu, ol, ul {
-       list-style-type: none;
-       margin: 0;
-       padding: 0;
-   }
-   </style>
-  <title>Document</title>
+  <title>Informatitchology</title>
+  <link rel="stylesheet" href="styleAll.css">
+  <link rel="stylesheet" href="styleCurso1.css">
 </head>
 <body>
-  <div class="link-1-curso">
-    <img class="image-4" src="image-40.png" />
-    <div class="rectangle-15"></div>
-    <div
-      class="a-tecnologia-da-informa-o-ti-um-dos-pilares-fundamentais-da-era-digital-desempenhando-um-papel-estrat-gico-na-inova-o-automa-o-e-otimiza-o-de-processos-em-empresas-e-na-sociedade-ela-engloba-um-amplo-conjunto-de-recursos-tecnol-gicos-e-computacionais-utilizados-para-a-coleta-armazenamento-processamento-e-transmiss-o-de-dados-promovendo-efici-ncia-seguran-a-e-intelig-ncia-nas-opera-es-desde-a-infraestrutura-de-hardware-e-software-at-a-ciberseguran-a-e-a-computa-o-em-nuvem-a-ti-impulsiona-a-transforma-o-digital-e-a-tomada-de-decis-es-baseadas-em-dados-seu-impacto-se-estende-a-diversos-setores-como-sa-de-educa-o-finan-as-e-ind-stria-tornando-se-essencial-para-a-competitividade-e-o-crescimento-sustent-vel-das-organiza-es-no-cen-rio-global-a-programa-o-tem-um-papel-central-na-ti-pois-permite-o-desenvolvimento-de-sistemas-aplicativos-e-solu-es-tecnol-gicas-que-impulsionam-a-inova-o-e-a-automa-o"
-    >
-      A Tecnologia da Informação (TI) é um dos pilares fundamentais da era
-      digital, desempenhando um papel estratégico na inovação, automação e
-      otimização de processos em empresas e na sociedade.
-      <br />
-      Ela engloba um amplo conjunto de recursos tecnológicos e computacionais
-      utilizados para a coleta, armazenamento, processamento e transmissão de
-      dados, promovendo eficiência, segurança e inteligência nas operações.
-      <br />
-      Desde a infraestrutura de hardware e software até a cibersegurança e a
-      computação em nuvem, a TI impulsiona a transformação digital e a tomada de
-      decisões baseadas em dados. Seu impacto se estende a diversos setores, como
-      saúde, educação, finanças e indústria, tornando-se essencial para a
-      competitividade e o crescimento sustentável das organizações no cenário
-      global.
-      <br />
-      A programação tem um papel central na TI, pois permite o desenvolvimento de
-      sistemas, aplicativos e soluções tecnológicas que impulsionam a inovação e a
-      automação.
-    </div>
-    <div class="rectangle-12"></div>
-    <div class="voltar">Voltar</div>
-    <div class="rectangle-3"></div>
-    <div class="ol-fulano">Olá, Fulano</div>
-    <div class="seja-bem-vindos-a-plataforma-de-cursos">
-      Seja bem-vindos(a) à plataforma de cursos.
-    </div>
-    <img class="frame" src="frame0.svg" />
-    <img class="image-5" src="image-50.png" />
-    <div class="rectangle-152"></div>
-    <div class="criado-por-gustavo-porto">
-      Criado por:
-      <br />
-      Gustavo Porto
-    </div>
+  <div class="container">
+    <header class="header">
+      <div class="header-top">
+        <img src="../imgs/logo.png" alt="Logo" class="logo">
+        <div class="user">
+          <p>Olá, Fulano</p>
+          <p>Seja bem-vindo(a) à plataforma de cursos.</p>
+        </div>
+        <img src="../imgs/recurs/perfil.png" alt="Usuário" class="user-icon" onclick="window.location.href='Perfil.html'">
+      </div>
+      <div class="menu">
+        <button onclick="window.location.href='Curso.html'">Curso</button>
+        <button onclick="window.location.href='Noticias.html'">Notícias</button>
+        <button onclick="window.location.href='Contato.html'">Contato</button>
+      </div>
+    </header>
+
+    <main class="main-content">
+      <section class="curso-detalhe">
+        <img src="../imgs/conteudo/image-10.png" alt="Tecnologia da Informação" class="curso-img">
+        <div class="curso-info">
+          <h3>A Tecnologia da Informação (TI)</h3>
+          <p>
+            A Tecnologia da informação (TI) é um dos pilares fundamentais da era digital, desempenhando um papel essencial na organização, armazenamento, processamento e disseminação de informações em todos os setores da sociedade.<br><br>
+            Ela engloba o conjunto de recursos tecnológicos e computacionais utilizados para o tratamento da informação, incluindo hardware, software, redes de computadores, bancos de dados e sistemas de comunicação.<br><br>
+            O avanço da TI permitiu a transformação de dados, informações e conhecimento em ativos estratégicos para empresas, governos e indivíduos, impulsionando a inovação e a automação.
+          </p>
+          <button class="voltar-btn" onclick="window.location.href='Curso.html'">Voltar</button>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      Criado por: Gustavo Porto
+    </footer>
   </div>
-  
 </body>
 </html>
