--- a/public/screens/Conf.html
+++ b/public/screens/Conf.html
@@ -15,7 +15,7 @@
 
       <label class="email" for="email">Email</label>
       <input id="email" type="email" class="input-email" autocomplete="off">
-      <button type="button" class="modo-claro" onclick="window.location.href='site_light_mode/Conf.html'">Modo Claro</button>
+      <button type="button" class="modo-claro">Modo Claro</button>
       <div class="botoes">
         <button type="button" class="cancelar" onclick="window.location.href='Perfil.html'">Cancelar</button>
         <button type="submit" class="salvar" onclick="window.location.href='Perfil.html'">Salvar</button>
