desabilitando botao (modo claro) tirado JSON deixando o script apenas em html

--- a/public/screens/Conf.html
+++ b/public/screens/Conf.html
@@ -18,7 +18,7 @@
       <button type="button" class="modo-claro">Modo Claro</button>
       <div class="botoes">
         <button type="button" class="cancelar" onclick="window.location.href='Perfil.html'">Cancelar</button>
-        <button type="submit" class="salvar" onclick="window.location.href='Perfil.html'">Salvar</button>
+        <button type="button" class="salvar" onclick="window.location.href='Perfil.html'">Salvar</button>
       </div>
     </form>
   </div>
