--- a/public/screens/Noticias.html
+++ b/public/screens/Noticias.html
@@ -68,8 +68,20 @@
     </main>
 
     <footer>
+      <button id="btn-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">↑</button>
       Criado por: Gustavo Porto
     </footer>
   </div>
+  <div vw class="enabled">
+  <div vw-access-button class="active"></div>
+  <div vw-plugin-wrapper>
+    <div class="vw-plugin-top-wrapper"></div>
+  </div>
+</div>
+<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+<script>
+  new window.VLibras.Widget('https://vlibras.gov.br/app');
+</script>
+
 </body>
 </html>
