--- a/public/screens/Conf.html
+++ b/public/screens/Conf.html
@@ -15,7 +15,7 @@
 
       <label class="email" for="email">Email</label>
       <input id="email" type="email" class="input-email" autocomplete="off">
-      <button type="button" class="modo-claro">Modo Claro</button>
+      <button type="button" class="modo-claro">Modo Contraste</button>
       <div class="botoes">
         <button type="button" class="cancelar" onclick="window.location.href='Perfil.html'">Cancelar</button>
         <button type="button" class="salvar" onclick="window.location.href='Perfil.html'">Salvar</button>
@@ -33,5 +33,35 @@
   new window.VLibras.Widget('https://vlibras.gov.br/app');
 </script>
 
+<script>
+  // Função para ativar/desativar contraste e salvar no localStorage
+  function toggleContraste() {
+    if (document.body.classList.contains('contraste-ativo')) {
+      document.body.classList.remove('contraste-ativo');
+      localStorage.setItem('contrasteAtivo', 'false');
+    } else {
+      document.body.classList.add('contraste-ativo');
+      localStorage.setItem('contrasteAtivo', 'true');
+    }
+  }
+
+  // Aplica contraste automaticamente se estiver salvo, exceto em login/cadastrar
+  document.addEventListener('DOMContentLoaded', function() {
+    const path = window.location.pathname.toLowerCase();
+    if (!path.includes('login.html') && !path.includes('cadastrar.html')) {
+      if (localStorage.getItem('contrasteAtivo') === 'true') {
+        document.body.classList.add('contraste-ativo');
+      }
+    } else {
+      // Remove contraste nessas páginas, se houver
+      document.body.classList.remove('contraste-ativo');
+    }
+    // Adiciona evento ao botão se existir
+    const btn = document.querySelector('.modo-claro');
+    if (btn) {
+      btn.onclick = toggleContraste;
+    }
+  });
+</script>
 </body>
 </html>
