--- a/public/screens/Curso.html
+++ b/public/screens/Curso.html
@@ -24,6 +24,7 @@
       </div>
     </header>
 
+
     <main class="main-content">
       <section class="intro">
         <img src="../imgs/conteudo/img_random.png" alt="Alunos em aula">
@@ -61,17 +62,50 @@
       <button id="btn-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">↑</button>
       Criado por: Gustavo Porto
     </footer>
-    <div vw class="enabled">
-  <div vw-access-button class="active"></div>
-  <div vw-plugin-wrapper>
-    <div class="vw-plugin-top-wrapper"></div>
-  </div>
-</div>
-<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
-<script>
-  new window.VLibras.Widget('https://vlibras.gov.br/app');
-</script>
 
+    <!-- Botões de fonte fixos -->
+    <div class="font-controls-fixed">
+      <button onclick="alterarFonte(1)">A+</button>
+      <button onclick="alterarFonte(-1)">A-</button>
+    </div>
+
+    <div vw class="enabled">
+      <div vw-access-button class="active"></div>
+      <div vw-plugin-wrapper>
+        <div class="vw-plugin-top-wrapper"></div>
+      </div>
+    </div>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+      new window.VLibras.Widget('https://vlibras.gov.br/app');
+      function alterarFonte(delta) {
+        const main = document.querySelector('.main-content');
+        if (!main) return;
+        // Seleciona todos os elementos de texto dentro de main-content
+        const textos = main.querySelectorAll('p, h1, h2, h3, h4, h5, h6, li, button');
+        textos.forEach(function(el) {
+          let atual = parseFloat(window.getComputedStyle(el).fontSize) || 16;
+          let novo = atual + delta;
+          if (novo < 12) novo = 12;
+          if (novo > 50) novo = 50;
+          el.style.fontSize = novo + "px";
+        });
+      }
+    </script>
+    <script>
+  // Aplica contraste automaticamente se estiver salvo, exceto em login/cadastrar
+  document.addEventListener('DOMContentLoaded', function() {
+    const path = window.location.pathname.toLowerCase();
+    if (!path.includes('login.html') && !path.includes('cadastrar.html')) {
+      if (localStorage.getItem('contrasteAtivo') === 'true') {
+        document.body.classList.add('contraste-ativo');
+      }
+    } else {
+      // Remove contraste nessas páginas, se houver
+      document.body.classList.remove('contraste-ativo');
+    }
+  });
+</script>
   </div>
 </body>
 </html>
