--- a/public/screens/Perfil.html
+++ b/public/screens/Perfil.html
@@ -13,7 +13,7 @@
         <img src="../imgs/recurs/perfil.png" alt="Foto do usuário">
       </div>
       <button class="editar-btn" >Editar Perfil</button>
-      <div class="configuracao" onclick="window.location.href='Conf.html'" style="cursor:pointer;">Configuração</div>
+      <div class="configuracao" onclick="window.location.href='conf.html'" style="cursor:pointer;">Configuração</div>
       <button class="voltar-btn" onclick="voltarPagina()">Voltar</button>
       <button class="sair-btn" onclick="window.location.href='Login.html'">Sair</button>
     </div>
