--- a/public/screens/Contato.html
+++ b/public/screens/Contato.html
@@ -43,6 +43,14 @@
       <button id="btn-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">↑</button>
       Criado por: Gustavo Porto
     </footer>
+
+    <!-- Botões de fonte fixos -->
+    <div class="font-controls-fixed">
+      <button onclick="alterarFonte(1)">A+</button>
+      <button onclick="fontePadrao()">A</button>
+      <button onclick="alterarFonte(-1)">A-</button>
+    </div>
+    
     <div vw class="enabled">
   <div vw-access-button class="active"></div>
   <div vw-plugin-wrapper>
@@ -52,6 +60,44 @@
 <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
 <script>
   new window.VLibras.Widget('https://vlibras.gov.br/app');
+  // Aplica o tamanho salvo ao carregar a página
+  function aplicarFonteSalva() {
+    const tamanhoSalvo = parseFloat(localStorage.getItem('tamanhoFonte')) || 16;
+    alterarFonte(0, true, tamanhoSalvo);
+  }
+
+  // Altera o tamanho da fonte de todos os textos relevantes
+  function alterarFonte(delta, setarDireto = false, valorDireto = 16) {
+    // Seleciona todos os textos relevantes
+    const textos = document.querySelectorAll(
+      'body, p, h1, h2, h3, h4, h5, h6, li, button, label, input, .info-card, .card, .main-content, .configura-o'
+    );
+    let atual = parseFloat(localStorage.getItem('tamanhoFonte')) || 16;
+    let novo = setarDireto ? valorDireto : atual + delta;
+    if (novo < 12) novo = 12;
+    if (novo > 50) novo = 50;
+    textos.forEach(function(el) {
+      el.style.fontSize = novo + "px";
+    });
+    localStorage.setItem('tamanhoFonte', novo);
+  }
+
+  // Botão para fonte padrão
+  function fontePadrao() {
+    localStorage.setItem('tamanhoFonte', 16);
+    // Remove o font-size inline para todos os elementos afetados
+    const textos = document.querySelectorAll(
+      'body, p, h1, h2, h3, h4, h5, h6, li, button, label, input, .info-card, .card, .main-content, .configura-o'
+    );
+    textos.forEach(function(el) {
+      el.style.fontSize = '';
+    });
+  }
+
+  // Aplica ao carregar a página
+  document.addEventListener('DOMContentLoaded', function() {
+    aplicarFonteSalva();
+  });
 </script>
 <script>
   // Função para ativar/desativar contraste e salvar no localStorage
