--- a/public/screens/Curso1.html
+++ b/public/screens/Curso1.html
@@ -65,8 +65,44 @@
 <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
 <script>
   new window.VLibras.Widget('https://vlibras.gov.br/app');
-</script>
-<script>
+  // Aplica o tamanho salvo ao carregar a página
+  function aplicarFonteSalva() {
+    const tamanhoSalvo = parseFloat(localStorage.getItem('tamanhoFonte')) || 16;
+    alterarFonte(0, true, tamanhoSalvo);
+  }
+
+  // Altera o tamanho da fonte de todos os textos relevantes
+  function alterarFonte(delta, setarDireto = false, valorDireto = 16) {
+    const textos = document.querySelectorAll(
+      'body, p, h1, h2, h3, h4, h5, h6, li, button, label, input, .info-card, .card, .main-content, .configura-o'
+    );
+    let atual = parseFloat(localStorage.getItem('tamanhoFonte')) || 16;
+    let novo = setarDireto ? valorDireto : atual + delta;
+    if (novo < 12) novo = 12;
+    if (novo > 50) novo = 50;
+    textos.forEach(function(el) {
+      el.style.fontSize = novo + "px";
+    });
+    localStorage.setItem('tamanhoFonte', novo);
+  }
+
+  // Botão para fonte padrão
+  function fontePadrao() {
+    localStorage.setItem('tamanhoFonte', 16);
+    // Remove o font-size inline para todos os elementos afetados
+    const textos = document.querySelectorAll(
+      'body, p, h1, h2, h3, h4, h5, h6, li, button, label, input, .info-card, .card, .main-content, .configura-o'
+    );
+    textos.forEach(function(el) {
+      el.style.fontSize = '';
+    });
+  }
+
+  // Aplica ao carregar a página
+  document.addEventListener('DOMContentLoaded', function() {
+    aplicarFonteSalva();
+  });
+
   // Função para ativar/desativar contraste e salvar no localStorage
   function toggleContraste() {
     if (document.body.classList.contains('contraste-ativo')) {
@@ -86,13 +122,7 @@
         document.body.classList.add('contraste-ativo');
       }
     } else {
-      // Remove contraste nessas páginas, se houver
       document.body.classList.remove('contraste-ativo');
-    }
-    // Adiciona evento ao botão se existir
-    const btn = document.querySelector('.modo-claro');
-    if (btn) {
-      btn.onclick = toggleContraste;
     }
   });
 </script>
