--- a/public/screens/Noticias.html
+++ b/public/screens/Noticias.html
@@ -71,6 +71,11 @@
       <button id="btn-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">↑</button>
       Criado por: Gustavo Porto
     </footer>
+    <div class="font-controls-fixed">
+  <button onclick="alterarFonte(1)">A+</button>
+  <button onclick="fontePadrao()">A</button>
+  <button onclick="alterarFonte(-1)">A-</button>
+</div>
   </div>
   <div vw class="enabled">
   <div vw-access-button class="active"></div>
@@ -83,6 +88,44 @@
   new window.VLibras.Widget('https://vlibras.gov.br/app');
 </script>
 <script>
+  // Aplica o tamanho salvo ao carregar a página
+  function aplicarFonteSalva() {
+    const tamanhoSalvo = parseFloat(localStorage.getItem('tamanhoFonte')) || 16;
+    alterarFonte(0, true, tamanhoSalvo);
+  }
+
+  // Altera o tamanho da fonte de todos os textos relevantes
+  function alterarFonte(delta, setarDireto = false, valorDireto = 16) {
+    const textos = document.querySelectorAll(
+      'body, p, h1, h2, h3, h4, h5, h6, li, button, label, input, .info-card, .card, .main-content, .configura-o'
+    );
+    let atual = parseFloat(localStorage.getItem('tamanhoFonte')) || 16;
+    let novo = setarDireto ? valorDireto : atual + delta;
+    if (novo < 12) novo = 12;
+    if (novo > 50) novo = 50;
+    textos.forEach(function(el) {
+      el.style.fontSize = novo + "px";
+    });
+    localStorage.setItem('tamanhoFonte', novo);
+  }
+
+  // Botão para fonte padrão
+  function fontePadrao() {
+    localStorage.setItem('tamanhoFonte', 16);
+    // Remove o font-size inline para todos os elementos afetados
+    const textos = document.querySelectorAll(
+      'body, p, h1, h2, h3, h4, h5, h6, li, button, label, input, .info-card, .card, .main-content, .configura-o'
+    );
+    textos.forEach(function(el) {
+      el.style.fontSize = '';
+    });
+  }
+
+  // Aplica ao carregar a página
+  document.addEventListener('DOMContentLoaded', function() {
+    aplicarFonteSalva();
+  });
+
   // Aplica contraste automaticamente se estiver salvo, exceto em login/cadastrar
   document.addEventListener('DOMContentLoaded', function() {
     const path = window.location.pathname.toLowerCase();
@@ -91,7 +134,6 @@
         document.body.classList.add('contraste-ativo');
       }
     } else {
-      // Remove contraste nessas páginas, se houver
       document.body.classList.remove('contraste-ativo');
     }
   });
